[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.11.2"
hmac = "0.12.1"
jsonwebtoken = "9.2.0"
log = "0.4.20"
postgres = {version = "0.19.7", features = ["with-chrono-0_4"]}
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
sha2 = "0.10.8"
sqlx = {version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ]}
tokio-postgres = "0.7.10"
uuid = { version = "1.7.0", features = ["serde"] }
